--- a/css/common.css
+++ b/css/common.css
@@ -22,3 +22,16 @@ button {
   padding: 8px 12px;
   cursor: pointer;
 }
+
+.gallery {
+  display: flex;
+  list-style: none;
+  justify-content: center;
+}
+
+.task3-img {
+  height: 250px;
+  border: 5px solid rgb(228, 228, 228);
+  border-bottom: 60px solid rgb(228, 228, 228);
+  margin: 0 5px;
+}
